--- a/.eslintrc
+++ b/.eslintrc
@@ -2,6 +2,7 @@
   "extends": ["standard", "standard-react"],
   "rules": {
     "jsx-quotes": ["error", "prefer-double"],
-    semi: ["error", "always"]
+    semi: ["error", "always"],
+    arrow-parens: ["error", "as-needed"]
   }
 }
